--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,15 +1,33 @@
 {
-	"$schema": "https://inlang.com/schema/inlang-message-format",
-	"signup": "Sign up",
-	"homeHeroSub": "Central sign-up platform for DMUN conferences",
-	"homeRegistration": "Conference registration",
-	"homeRegistrationSub": "Sign up for the next conference by applying",
-	"homeRegistrationBtn": "Sign up",
-	"homeYourConferences": "Your conferences",
-	"homeYourConferencesSub": "View the conferences you are attending",
-	"homeYourConferencesBtn": "Go to dashboard",
-	"homeDraftDisclaimer": "This page is still under construction and has no functionality. It is only used as a conceptual design.",
+    "$schema": "https://inlang.com/schema/inlang-message-format",
+    "signup": "Sign up",
+    "back": "Back",
+    "homeHeroSub": "Central registration platform for DMUN conferences",
+    "homeRegistration": "Conference registration",
+    "homeRegistrationSub": "Register for the next conference by applying",
+    "homeRegistrationBtn": "To register",
+    "homeYourConferences": "Your conferences",
+    "homeYourConferencesSub": "View the conferences you are attending",
+    "homeYourConferencesBtn": "To the dashboard",
+    "homeDraftDisclaimer": "This page is still under construction and has no functionality. It only serves as a conceptual design.",
     "homeOurConferences": "Our conferences",
     "homeAboutUs": "About us",
-    "homeAboutUsText": "DMUN is a non-profit association of young adults who are passionate about international politics and the United Nations. We are active nationwide and internationally in the field of political youth education and youth empowerment. Founded in 2003, and accredited as a non-governmental organization with special consultative status by the Economic and Social Council of the United Nations and the UNDPI since 2012, we organize political role-playing games in which young people between the ages of 15 and 21 simulate a United Nations conference. We also advocate for political youth education and the participation of young people in political processes at the international level."
+    "homeAboutUsText": "DMUN is a non-profit organization of young adults who are passionate about international politics and the United Nations. We are active nationwide and internationally in the field of political youth education and youth empowerment. Founded in 2003 and accredited as a non-governmental organization with special consultative status with the United Nations Economic and Social Council and UNDPI since 2012, we organize political simulation games in which teenagers and young adults between the ages of 15 and 21 simulate a United Nations conference. We also promote political youth education and the participation of young people in political processes at an international level.",
+    "selectConference": "First select the conference you would like to register for.",
+    "unknownLocation": "Unknown location",
+    "unknownDate": "Unknown date",
+    "conferenceSignupIntroduction": "You have various options for registering. You can apply for a state or non-state actor as a team of at least 2 people. For special roles such as a member of the conference press, you apply alone.",
+    "signUpAssistant": "Login wizard",
+    "signUpAssistantDescription": "The registration process can seem complicated at first glance. Use the registration wizard to get an overview.",
+    "openAssistant": "Start assistant",
+    "createDelegation": "Create delegation",
+    "createDelegationDescription": "As head of delegation, you can create a new delegation here and invite people to join the delegation",
+    "joinDelegation": "Join delegation",
+    "enterCode": "Enter code",
+    "joinDelegationDescription": "Here you can join a delegation with a code issued to you by the head of delegation.",
+    "individualApplication": "Individual application",
+    "individualApplicationDescription": "Here you can apply on your own for a place in one of the special delegations such as the conference press.",
+    "supervisor": "Supervisor",
+    "applyAsSupervisor": "Apply as Supervisor",
+    "applyAsSupervisorDescription": "You can register as a supervisor for a delegation here. As a supervisor, you have access to all your delegations and can provide them with organizational support."
 }
