✨ feat (MUNify): delegation creation branch: application

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -29,5 +29,27 @@
     "individualApplicationDescription": "Here you can apply on your own for a place in one of the special delegations such as the conference press.",
     "supervisor": "Supervisor",
     "applyAsSupervisor": "Apply as Supervisor",
-    "applyAsSupervisorDescription": "You can register as a supervisor for a delegation here. As a supervisor, you have access to all your delegations and can provide them with organizational support."
+    "applyAsSupervisorDescription": "You can register as a supervisor for a delegation here. As a supervisor, you have access to all your delegations and can provide them with organizational support.",
+    "infos": "Infos",
+    "questionnaire": "Questionnaire",
+    "review": "Review",
+    "invite": "Invite",
+    "createDelegationProcessExplaination": "<p class='max-ch-md'>You are about to create a delegation. Once you have created a delegation, you can invite delegation partners and apply as a delegate to a state or as a representative of a non-state actor.</p><p class='max-ch-md'>You are automatically entered as the head of delegation. You can also enter a supervising person who will support you in organizing the delegation. </p><p class='max-ch-md'>Please note that you cannot apply for a delegation on your own. If you would like to apply alone, please see <a href='.' class='link underline'>here</a> for individual places for which you can apply. The participant support team will also be happy to help you find delegation partners. You can find the contact details on the website of the respective conference. </p>",
+    "next": "Next",
+    "pleaseAnswerTheFollowingQuestions": "Please answer the following questions first. You can change your answers before you register.",
+    "whichSchoolDoesYourDelegationComeFrom": "Which school / institution do you (or the majority of your delegation) come from?",
+    "answerHere": "Answer here",
+    "whyDoYouWantToJoinTheConference": "Why do you want to join the conference?",
+    "howMuchExperienceDoesYourDelegationHave": "How much experience does your delegation have with political simulation games such as Model United Nations?",
+    "pleaseCheckYourAnswers": "Bitte Überprüfen Sie noch einmal Ihre Angaben.",
+    "conference": "Konferenz",
+    "schoolOrInstitution": "Schule / Institution",
+    "motivation": "Motivation",
+    "experience": "Erfahrung",
+    "delegationCreatedSuccessfully": "Delegation erfolgreich erstellt.",
+    "nowYouCanInvitePeople": "Nun müssen Sie nur noch Delegationspartner*innen einladen. Dafür können Sie den Menschen, die Sie einladen möchten, den folgenden Link senden:",
+    "orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
+    "linkCopied": "Link kopiert",
+    "codeCopied": "Code kopiert",
+    "toDashboard": "Zum Dashboard"
 }
