--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -20,7 +20,6 @@
     "signUpAssistant": "Anmeldeassistent",
     "signUpAssistantDescription": "Der Anmeldeprozess kann auf den ersten Blick kompliziert wirken. Nutzen Sie den Anmeldeassistenten, um einen Überblick zu erhalten.",
     "openAssistant": "Assistent starten",
-    "createDelegation": "Delegation anlegen",
     "createDelegationDescription": "Hier kannst du als Delegationsleiter*in eine neue Delegation anlegen und Menschen zu der Delegation einladen",
     "joinDelegation": "Delegation beitreten",
     "enterCode": "Code eingeben",
@@ -29,5 +28,28 @@
     "individualApplicationDescription": "Hier kannst du dich alleine auf einen Platz ein einer der Speziellen Delegationen wie der Konferenzpresse bewerben.",
     "supervisor": "Betreuer*in",
     "applyAsSupervisor": "Anmelden als Betreuer*in",
-    "applyAsSupervisorDescription": "Hier kannst du dich als Betreuer*in für eine Delegation anmelden. Als Betreuer*in hast du Einsicht in alle deine Delegationen und kannst sie organisatorisch unterstützen."
+    "applyAsSupervisorDescription": "Hier kannst du dich als Betreuer*in für eine Delegation anmelden. Als Betreuer*in hast du Einsicht in alle deine Delegationen und kannst sie organisatorisch unterstützen.",
+    "infos": "Infos",
+    "questionnaire": "Fragebogen",
+    "review": "Überprüfen",
+    "invite": "Einladen",
+    "createDelegationProcessExplaination": "<p class='max-ch-md'>Sie sind im Begriff, eine Delegation anzulegen. Nachdem Sie eine Delegation angelegt haben, können Sie Delegationspartner*innen einladen und sich geschlossen als Delegierte auf einen Staat oder als Vertreter*innen einer/eines Nichtstaatlichen Aktuer*in bewerben.</p><p class='max-ch-md'>Sie werden automatisch als Delegationsleiter*in eingetragen. Sie können auch eine betreuende Person eintragen, die Sie bei der Organisation der Delegation unterstützt. </p><p class='max-ch-md'>Bitte beachten Sie, dass Sie sich nicht alleine auf eine Delegation bewerben können. Wenn Sie sich alleine bewerben möchten, schauen Sie <a href='.' class='link underline'>hier</a> nach Einzelplätzen, auf die Sie sich bewerben können. Außerdem hilft Ihnen die Teilnehmendenbetreuung sehr gerne bei der Vermittlung von Delegationspartner*innen. Den Kontakt finden Sie auf der Website der jeweiligen Konferenz. </p>",
+    "next": "Weiter",
+    "pleaseAnswerTheFollowingQuestions": "Bitte beantworten Sie zunächst die folgenden Fragen. Sie können die Antworten vor der Anmeldung noch ändern.",
+    "whichSchoolDoesYourDelegationComeFrom": "Von welcher Schule / Institution kommt Sie (bzw. die Mehrheit Ihrer Delegation)?",
+    "answerHere": "Antwort hier eingeben",
+    "whyDoYouWantToJoinTheConference": "Warum bewirbt sich Ihre Delegation bei der Konferenz?",
+    "howMuchExperienceDoesYourDelegationHave": "Über wie viel Erfahrung mit politischen Planspielen wie Model United Nations verfügt ihre Delegation?",
+    "pleaseCheckYourAnswers": "Bitte Überprüfen Sie noch einmal Ihre Angaben.",
+    "conference": "Konferenz",
+    "schoolOrInstitution": "Schule / Institution",
+    "motivation": "Motivation",
+    "experience": "Erfahrung",
+    "createDelegation": "Delegation erstellen",
+    "delegationCreatedSuccessfully": "Delegation erfolgreich erstellt.",
+    "nowYouCanInvitePeople": "Nun müssen Sie nur noch Delegationspartner*innen einladen. Dafür können Sie den Menschen, die Sie einladen möchten, den folgenden Link senden:",
+    "orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
+    "linkCopied": "Link kopiert",
+    "codeCopied": "Code kopiert",
+    "toDashboard": "Zum Dashboard"
 }
