--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -57,5 +57,40 @@
 	"headDelegate": "Delegationsleiter*in",
 	"amountOfDelegates": "Anzahl der Delegationsmitglieder",
 	"signupForSupervisors": "Anmeldung für Betreuer*innen",
-	"delegationJoinForSupervisorsDescription": "Als Betreuer*in können Sie mehrere Delegationen überwachen. Erfragen Sie dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachten Sie, dass Sie keine Delegationen selbstständig für Ihre Schüler*innen anlegen können. Sie können sich nur nach Erhalt des Codes einer Delegation anschließen."
+	"delegationJoinForSupervisorsDescription": "Als Betreuer*in können Sie mehrere Delegationen überwachen. Erfragen Sie dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachten Sie, dass Sie keine Delegationen selbstständig für Ihre Schüler*innen anlegen können. Sie können sich nur nach Erhalt des Codes einer Delegation anschließen.",
+	"myAccount": "Mein Konto",
+	"herYouFindYourAccountInfo": "Hier findest du alle Informationen und Präferenzen zu deinem Konto.",
+	"completeData": "Daten Vervollständigen",
+	"completeDataExplaination": "Vielen Dank für deine Registrierung. Bitte vervollständige deine persönlichen Daten, um deine Anmeldung abzuschließen. Danach kannst du da weitermachen, wo du eigentlich hin wolltest. Wenn du auf Speichern klickst, wirst du automatisch weitergeleitet.",
+	"personalData": "Persönliche Daten",
+	"phoneNumber": "Telefonnummer",
+	"address": "Addresse",
+	"street": "Straße",
+	"streetAddition": "ggf. Zusatz",
+	"zipCode": "Postleitzahl",
+	"city": "Stadt",
+	"pleaseSelectCountry": "Land",
+	"birthDate": "Geburtsdatum",
+	"gender": "Geschlecht",
+	"pleaseSelect": "Bitte auswählen",
+	"male": "Männlich",
+	"female": "Weiblich",
+	"diverse": "Divers",
+	"unspecified": "Keine Angabe",
+	"pronouns": "Pronomen",
+	"pronounsExample": "z.B. er/ihm oder sie/ihr",
+	"diet": "Ernährungsweise",
+	"vegan": "Vegan",
+	"vegetarian": "Vegetarisch",
+	"omnivore": "Omnivor",
+	"save": "Speichern",
+	"saveAndContinue": "Speichern und weiter",
+	"loginInformation": "Anmeldeinformationen",
+	"loginName": "Anmeldename",
+	"password": "Passwort",
+	"firstName": "Vorname",
+	"lastName": "Nachname",
+	"email": "E-Mail",
+	"userId": "Benutzer-ID",
+	"edit": "Bearbeiten"
 }
