--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,7 +1,11 @@
 {
     "$schema": "https://inlang.com/schema/inlang-message-format",
     "signup": "Anmelden",
+    "registerNow": "Jetzt Anmelden",
     "back": "Zurück",
+    "backToHome": "Zurück zur Homepage",
+    "noConferenceHeading": "Keine Konferenz",
+    "noConferenceText": "Es sieht so aus, als wärst du bisher nicht bei einer Konferenz registriert.",
     "homeHeroSub": "Zentrale Anmeldeplattform für DMUN-Konferenzen",
     "homeRegistration": "Konferenzanmeldung",
     "homeRegistrationSub": "Melden Sie sich für die nächste Konferenz an, indem Sie sich bewerben",
@@ -55,5 +59,9 @@
     "pleaseCheckDelegation": "Überprüfe die Angaben und bestätige den Beitritt zur Delegation.",
     "confirm": "Bestätigen",
     "headDelegate": "Delegationsleiter*in",
-    "amountOfDelegates": "Anzahl der Delegationsmitglieder"
+    "amountOfDelegates": "Anzahl der Delegationsmitglieder",
+    "dangerZone": "Danger Zone",
+    "leaveDelegation": "Delegation verlassen",
+    "deleteDelegation": "Delegation löschen",
+    "transferHeadDelegateship": "Delegationsleitung übertragen"
 }
