--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,11 @@
 {
     "$schema": "https://inlang.com/schema/inlang-message-format",
     "signup": "Sign up",
+    "signupNow": "Sign up Now",
     "back": "Back",
+    "backToHome": "Back To Home",
+    "noConferenceHeading": "No Conference",
+    "noConferenceText": "It seems like you did not register for a conference yet.",
     "homeHeroSub": "Central registration platform for DMUN conferences",
     "homeRegistration": "Conference registration",
     "homeRegistrationSub": "Register for the next conference by applying",
@@ -55,5 +59,9 @@
     "pleaseCheckDelegation": "Überprüfe die Angaben und bestätige den Beitritt zur Delegation.",
     "confirm": "Confirm",
     "headDelegate": "Delegationsleiter*in",
-    "amountOfDelegates": "Anzahl der Delegationsmitglieder"
+    "amountOfDelegates": "Anzahl der Delegationsmitglieder",
+    "dangerZone": "Danger Zone",
+    "leaveDelegation": "Leave Delegation",
+    "deleteDelegation": "Delete Delegation",
+    "transferHeadDelegateship": "Transfer Head Delegateship"
 }
