--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -4,6 +4,8 @@
     "registerNow": "Jetzt Anmelden",
     "back": "Zurück",
     "backToHome": "Zurück zur Homepage",
+    "save": "Speichern",
+    "committee": "Gremium",
     "noConferenceHeading": "Keine Konferenz",
     "noConferenceText": "Es sieht so aus, als wärst du bisher nicht bei einer Konferenz registriert.",
     "homeHeroSub": "Zentrale Anmeldeplattform für DMUN-Konferenzen",
@@ -53,6 +55,8 @@
     "delegationCreatedSuccessfully": "Delegation erfolgreich erstellt.",
     "nowYouCanInvitePeople": "Nun müssen Sie nur noch Delegationspartner*innen einladen. Dafür können Sie den Menschen, die Sie einladen möchten, den folgenden Link senden:",
     "orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
+    "inviteMorePeople": "Mehr Menschen einladen",
+    "inviteMorePeopleDescription": "Lade weitere Mitglieder in deine Delegation ein. Die erforderliche Mindestanzahl an Mitgliedern beträgt 2.",
     "linkCopied": "Link kopiert",
     "codeCopied": "Code kopiert",
     "toDashboard": "Zum Dashboard",
@@ -63,5 +67,31 @@
     "dangerZone": "Danger Zone",
     "leaveDelegation": "Delegation verlassen",
     "deleteDelegation": "Delegation löschen",
-    "transferHeadDelegateship": "Delegationsleitung übertragen"
+    "transferHeadDelegateship": "Delegationsleitung übertragen",
+    "completeSignup": "Anmeldung abschließen",
+    "completeSignupDescription": "Bitte schließe alle Aufgaben ab und bestätige dann deine Anmeldung zur Delegation.",
+    "completeSignupButton": "Anmeldung verbindlich abschließen und damit am Auswahlverfahren teilnehmen",
+    "conpleteSignupWarningHeading": "Wichtig: Online-Anmeldung abschließen",
+    "conpleteSignupWarningText": "Du hast zwar bereits eine Delegation erstellt bzw. bist einer Delegation beigetreten, aber die Anmeldung ist noch nicht abgeschlossen. Bitte schließe die Anmeldung rechtzeitig vor Anmeldeschluss ab, sodass wir die Anmeldung deiner Delegation berücksichtigen können.",
+    "todoCreateDelegation": "Delegation erstellen",
+    "todoInvitePeople": "Menschen einladen",
+    "todoInvitePeopleHelp": "Lade weitere Mitglieder in deine Delegation ein. Die erforderliche Mindestanzahl an Mitgliedern beträgt 2.",
+    "todoAnswerQuestionaire": "Fragebogen beantworten",
+    "todoAnswerQuestionaireHelp": "Beantworte alle Fragen zu Motivation und Erfahrung, um deine Delegation zu vervollständigen.",
+    "todoEnterDelegationPreferences": "Vertretungswünsche eingeben",
+    "todoEnterDelegationPreferencesHelp": "Geben Sie an, welche Länder oder nichtstaatlichen Akteure Sie vertreten möchten. Sie müssen mindestens 3 Präferenzen angeben.",
+    "delegationStatus": "Delegationsstatus",
+    "delegationMembers": "Delegationsmitglieder",
+    "name": "Name",
+    "application": "Bewerbung",
+    "informationAndMotivation": "Informationen und Motivation",
+    "informationAndMotivationDescriptionHeadDelegate": "Hier können Sie die für die Bewerbung erforderlichen Informationen und Motivation bearbeiten.",
+    "informationAndMotivationDescriptionMember": "Hier können Sie die für die Bewerbung erforderlichen Informationen und Motivation sehen. Nur die Delegationsleitung kann diese bearbeiten.",
+    "delegationPreferences": "Vertretungswünsche",
+    "delegationPreferencesDescriptionHeadDelegate": "Hier können Sie die Vertretungswünsche für Ihre Delegation bearbeiten.",
+    "delegationPreferencesDescriptionMember": "Hier können Sie die Vertretungswünsche für Ihre Delegation sehen. Nur die Delegationsleitung kann diese bearbeiten.",
+    "setDelegationPreferences": "Wünsche festlegen",
+    "changeDelegationPreferences": "Wünsche anpassen",
+    "delegationIdForSupport": "If the Support asks you for your delegation ID, you can find it here:",
+    "noMembersFound": "Keine Delegationsmitglieder gefunden"
 }
