--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,6 +4,8 @@
     "signupNow": "Sign up Now",
     "back": "Back",
     "backToHome": "Back To Home",
+    "save": "Save",
+    "committee": "Committee",
     "noConferenceHeading": "No Conference",
     "noConferenceText": "It seems like you did not register for a conference yet.",
     "homeHeroSub": "Central registration platform for DMUN conferences",
@@ -53,6 +55,8 @@
     "delegationCreatedSuccessfully": "Delegation erfolgreich erstellt.",
     "nowYouCanInvitePeople": "Nun müssen Sie nur noch Delegationspartner*innen einladen. Dafür können Sie den Menschen, die Sie einladen möchten, den folgenden Link senden:",
     "orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
+    "inviteMorePeople": "Invite more people",
+    "inviteMorePeopleDescription": "Invite additional members to your delegation. The minimum required number of members is 2.",
     "linkCopied": "Link kopiert",
     "codeCopied": "Code kopiert",
     "toDashboard": "Zum Dashboard",
@@ -63,5 +67,31 @@
     "dangerZone": "Danger Zone",
     "leaveDelegation": "Leave Delegation",
     "deleteDelegation": "Delete Delegation",
-    "transferHeadDelegateship": "Transfer Head Delegateship"
+    "transferHeadDelegateship": "Transfer Head Delegateship",
+    "completeSignup": "Complete Registration",
+    "completeSignupDescription": "Please complete all tasks and then confirm your registration for the delegation.",
+    "completeSignupButton": "Complete registration and participate in the selection process",
+    "completeSignupWarningHeading": "Important: Complete Online Registration",
+    "completeSignupWarningText": "Although you have already created a delegation or joined one, the registration is not yet complete. Please finalize your registration in a timely manner before the registration deadline so that we can consider your delegation's registration.",
+    "todoCreateDelegation": "Create delegation",
+    "todoInvitePeople": "Invite people",
+    "todoInvitePeopleHelp": "Invite additional members to your delegation. The minimum required number of members is 2.",
+    "todoAnswerQuestionaire": "Answer questionnaire",
+    "todoAnswerQuestionaireHelp": "Answer all questions about motivation and experience to complete your delegation.",
+    "todoEnterDelegationPreferences": "Enter delegation preferences",
+    "todoEnterDelegationPreferencesHelp": "Indicate which countries or non-state actors you wish to represent. You must specify at least 3 preferences.",
+    "delegationStatus": "Delegation Status",
+    "delegationMembers": "Delegation Members",
+    "name": "Name",
+    "application": "Application",
+    "informationAndMotivation": "Information and Motivation",
+    "informationAndMotivationDescriptionHeadDelegate": "Here you can edit the Information and Motivation required for the Application.",
+    "informationAndMotivationDescriptionMember": "Here you can see the Information and Motivation for the Application. Only the Head Delegate can edit this information.",
+    "delegationPreferences": "Delegation Preferences",
+    "delegationPreferencesDescriptionHeadDelegate": "Here you can edit the delegation preferences for your delegation.",
+    "delegationPreferencesDescriptionMember": "Here you can see the delegation preferences for your delegation. Only the Head Delegate can edit this information.",
+    "setDelegationPreferences": "Set Preferences",
+    "changeDelegationPreferences": "Change Preferences",
+    "delegationIdForSupport": "If the Support asks you for your delegation ID, you can find it here:",
+    "noMembersFound": "No delegation members found"
 }
