🚧 wip (App Frontend): Dashboard branch: delegator/dashboard

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -93,5 +93,6 @@
     "setDelegationPreferences": "Wünsche festlegen",
     "changeDelegationPreferences": "Wünsche anpassen",
     "delegationIdForSupport": "If the Support asks you for your delegation ID, you can find it here:",
-    "noMembersFound": "Keine Delegationsmitglieder gefunden"
+    "noMembersFound": "Keine Delegationsmitglieder gefunden",
+    "noRoleApplications": "Bisher keine Rollenbewerbungen vorhanden"
 }
