--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -41,58 +41,58 @@
 	"answerHere": "Answer here",
 	"whyDoYouWantToJoinTheConference": "Why do you want to join the conference?",
 	"howMuchExperienceDoesYourDelegationHave": "How much experience does your delegation have with political simulation games such as Model United Nations?",
-	"pleaseCheckYourAnswers": "Bitte Überprüfen Sie noch einmal Ihre Angaben.",
-	"conference": "Konferenz",
-	"schoolOrInstitution": "Schule / Institution",
+	"pleaseCheckYourAnswers": "Please check your Answers.",
+	"conference": "Conference",
+	"schoolOrInstitution": "School / Institution",
 	"motivation": "Motivation",
-	"experience": "Erfahrung",
-	"delegationCreatedSuccessfully": "Delegation erfolgreich erstellt.",
-	"nowYouCanInvitePeople": "Nun müssen Sie nur noch Delegationspartner*innen einladen. Dafür können Sie den Menschen, die Sie einladen möchten, den folgenden Link senden:",
-	"orShareThisCode": "Oder teile mit Ihnen den folgenden Code, mit dem sie sich auf dieser Website anmelden können:",
-	"linkCopied": "Link kopiert",
-	"codeCopied": "Code kopiert",
-	"toDashboard": "Zum Dashboard",
-	"pleaseCheckDelegation": "Überprüfe die Angaben und bestätige den Beitritt zur Delegation.",
+	"experience": "Experience",
+	"delegationCreatedSuccessfully": "Delegation creation successful",
+	"nowYouCanInvitePeople": "Now you can invite members into your delegation. You can add members by providing the following link:",
+	"orShareThisCode": "Or share the following code, with which people may enter through this website:",
+	"linkCopied": "Link copied",
+	"codeCopied": "Code copied",
+	"toDashboard": "To the Dashboard",
+	"pleaseCheckDelegation": "Please review the details and confirm joining the delegation.",
 	"confirm": "Confirm",
-	"headDelegate": "Delegationsleiter*in",
-	"amountOfDelegates": "Anzahl der Delegationsmitglieder",
-	"signupForSupervisors": "Anmeldung für Betreuer*innen",
-	"delegationJoinForSupervisorsDescription": "Als Betreuer*in können Sie mehrere Delegationen überwachen. Erfragen Sie dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachten Sie, dass Sie keine Delegationen selbstständig für Ihre Schüler*innen anlegen können. Sie können sich nur nach Erhalt des Codes einer Delegation anschließen.",
-	"myAccount": "Mein Konto",
-	"herYouFindYourAccountInfo": "Hier findest du alle Informationen und Präferenzen zu deinem Konto.",
-	"completeData": "Daten Vervollständigen",
-	"completeDataExplaination": "Vielen Dank für deine Registrierung. Bitte vervollständige deine persönlichen Daten, um deine Anmeldung abzuschließen. Danach kannst du da weitermachen, wo du eigentlich hin wolltest. Wenn du auf Speichern klickst, wirst du automatisch weitergeleitet.",
-	"personalData": "Persönliche Daten",
-	"phoneNumber": "Telefonnummer",
-	"address": "Addresse",
-	"street": "Straße",
-	"streetAddition": "ggf. Zusatz",
-	"zipCode": "Postleitzahl",
-	"city": "Stadt",
-	"pleaseSelectCountry": "Land",
-	"birthDate": "Geburtsdatum",
-	"gender": "Geschlecht",
-	"pleaseSelect": "Bitte auswählen",
-	"male": "Männlich",
-	"female": "Weiblich",
-	"diverse": "Divers",
-	"unspecified": "Keine Angabe",
-	"pronouns": "Pronomen",
-	"pronounsExample": "z.B. er/ihm oder sie/ihr",
-	"diet": "Ernährungsweise",
-	"vegan": "Vegan",
-	"vegetarian": "Vegetarisch",
-	"omnivore": "Omnivor",
-	"save": "Speichern",
-	"saveAndContinue": "Speichern und weiter",
-	"loginInformation": "Anmeldeinformationen",
-	"loginName": "Anmeldename",
-	"password": "Passwort",
-	"firstName": "Vorname",
-	"lastName": "Nachname",
-	"email": "E-Mail",
-	"userId": "Benutzer-ID",
-	"edit": "Bearbeiten",
-	"receiveGeneralInformation": "Allgemeine E-Mails zum Projekt erhalten",
-	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins Team/den Verein erhalten"
+	"headDelegate": "Head Delegate",
+	"amountOfDelegates": "Number of delegation members",
+	"signupForSupervisors": "Sign Up for Supervisors",
+	"delegationJoinForSupervisorsDescription": "You can supervise multiple delegations. Please ask your Head Delegates of each delegation for the Join Code. Please acknowledge that you cannot create a delegation for your Students on your own. You can only join the delegation once it is created and you have the Join Code.",
+	"myAccount": "My Account",
+	"herYouFindYourAccountInfo": "Here you will find all information and preferences related to your account.",
+	"completeData": "Complete data",
+	"completeDataExplaination": "Thank you for registering. Please complete your personal details to complete your registration. You can then continue where you wanted to go. If you click on Save, you will be automatically redirected.",
+	"personalData": "Personal Data",
+	"phoneNumber": "Phone",
+	"address": "Adress",
+	"street": "Street",
+	"streetAddition": "Apartment",
+	"zipCode": "Zip-Code",
+	"city": "City",
+	"pleaseSelectCountry": "Country",
+	"birthDate": "Date of Birth",
+	"gender": "Gender",
+	"pleaseSelect": "Please select",
+	"male": "male",
+	"female": "female",
+	"diverse": "divers",
+	"unspecified": "not specified",
+	"pronouns": "pronoun",
+	"pronounsExample": "e.g. he/him or she/her",
+	"diet": "Diet",
+	"vegan": "vegan",
+	"vegetarian": "vegetarisch",
+	"omnivore": "Omnivorous",
+	"save": "Save",
+	"saveAndContinue": "Save and continue",
+	"loginInformation": "Login information",
+	"loginName": "Login Name",
+	"password": "Password",
+	"firstName": "Given Name",
+	"lastName": "Surname",
+	"email": "Email",
+	"userId": "User-ID",
+	"edit": "edit",
+	"receiveGeneralInformation": "Receive general information and conference announcements by email (in german)",
+	"receiveJoinTeamInformation": "Receive calls for tenders and announcements for the DMUN conference team by email (in german)"
 }
