✨ feat (MUNify): add icon picker branch: munify-delegator/undefined

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -96,5 +96,6 @@
 	"edit": "Bearbeiten",
 	"receiveGeneralInformation": "Allgemeine E-Mails zum Projekt erhalten",
 	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins Team/den Verein erhalten",
-	"pickIcon": "Icon auswählen"
+	"pickIcon": "Icon auswählen",
+	"search": "Suche"
 }
